fix: translation typo

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -23,7 +23,7 @@
   "resend.contact_ggd": "I you don't receive a message from us you can also request your data by calling the GGD at <a href=\"tel:08005090\">0800 - 5090</a>.",
   "resend.button": "Send again",
   "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
-  "footer.more_information": "More informatie",
+  "footer.more_information": "More information",
   "footer.see": "See",
   "continue": "Continue",
   "back": "Back"
