--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,7 +7,7 @@
   "login.patientId": "Patient number",
   "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
   "login.birthDate": "Birth date",
-  "login.birthDate_placeholder": "DD-MM-JJJJ",
+  "login.birthDate_placeholder": "DD-MM-YYYY",
   "confirmation.header": "Enter your confirmation code",
   "confirmation.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
   "confirmation.explanation.email": "You have received an e-mail with your verification code at :send_to. Your code is valid for 5 minutes.",
@@ -27,5 +27,13 @@
   "footer.see": "See",
   "continue": "Continue",
   "back": "Back",
-  ":code is your confirmation code": ":code is your confirmation code"
+  ":code is your confirmation code": ":code is your confirmation code",
+  "validation.invalid_patient_id": "Invalid patient number. You’ll find this number in your appointment confirmation from the GGD.",
+  "validation.invalid_date_of_birth": "Invalid date of birth. Please enter your date of birth as it is shown on your passport or identity card.",
+  "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
+  "validation.unknown_date_of_birth": "This date of birth doesn’t seem to match with the entered patient number.",
+  "validation.required_patient_id": "Please enter your patient number. You’ll find this in your appointment confirmation from the GGD.",
+  "validation.required_date_of_birth": "Please enter your date of birth.",
+  "validation.invalid_code": "Invalid code. Please enter your 6-digit verification code.",
+  "validation.required_code": "Please enter your 6-digit verification code first."
 }
