--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -27,5 +27,13 @@
   "footer.see": "Kijk op",
   "continue": "Verder",
   "back": "Terug",
-  ":code is your confirmation code": ":code is uw persoonlijke confirmatie code"
+  ":code is your confirmation code": ":code is uw persoonlijke confirmatie code",
+  "validation.invalid_patient_id": "Geen geldig patiëntnummer. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
+  "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Vul a.u.b. uw geboortedatum in zoals die op uw paspoort of identiteitskaart staat.",
+  "validation.unknown_patient_id": "Dit patiëntnummer lijkt niet bij de ingevulde geboortedatum te horen.",
+  "validation.unknown_date_of_birth": "Deze geboortedatum lijkt niet bij het ingevulde patiëntnummer te horen.",
+  "validation.required_patient_id": "Graag uw patiëntnummer invullen. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
+  "validation.required_date_of_birth": "Graag uw geboortedatum invullen.",
+  "validation.invalid_code": "Geen geldige code. Vul uw 6-cijferige verificatiecode in.",
+  "validation.required_code": "Graag eerst uw 6-cijferige verificatiecode invullen."
 }
