Translated sms message

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -26,5 +26,6 @@
   "footer.more_information": "More information",
   "footer.see": "See",
   "continue": "Continue",
-  "back": "Back"
+  "back": "Back",
+  ":code is your confirmation code": ":code is your confirmation code"
 }
