--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -26,5 +26,6 @@
   "footer.more_information": "Meer informatie",
   "footer.see": "Kijk op",
   "continue": "Verder",
-  "back": "Terug"
+  "back": "Terug",
+  ":code is your confirmation code": ":code is uw persoonlijke confirmatie code"
 }
