fix: rename "confirm" to "verify"
BREAKING: renames route /confirm to /verify

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -8,14 +8,14 @@
   "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
   "login.birthDate": "Birth date",
   "login.birthDate_placeholder": "DD-MM-YYYY",
-  "confirmation.header": "Enter your confirmation code",
-  "confirmation.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
-  "confirmation.explanation.email": "You have received an e-mail with your verification code at :send_to. Your code is valid for 5 minutes.",
-  "confirmation.verificationCode": "Verification code",
-  "confirmation.verificationCode_explanation": "Your verification code is made up of 6 digits",
-  "confirmation.retrieve_data": "Retrieve data",
-  "confirmation.no_code.sms": "No SMS received?",
-  "confirmation.no_code.email": "No e-mail received?",
+  "verify.header": "Enter your verification code",
+  "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
+  "verify.explanation.email": "You have received an e-mail with your verification code at :send_to. Your code is valid for 5 minutes.",
+  "verify.verificationCode": "Verification code",
+  "verify.verificationCode_explanation": "Your verification code is made up of 6 digits",
+  "verify.retrieve_data": "Retrieve data",
+  "verify.no_code.sms": "No SMS received?",
+  "verify.no_code.email": "No e-mail received?",
   "resend.header.sms": "I did not receive a text message",
   "resend.header.email": "I did not receive an e-mail",
   "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
@@ -27,7 +27,7 @@
   "footer.see": "See",
   "continue": "Continue",
   "back": "Back",
-  ":code is your confirmation code": ":code is your confirmation code",
+  ":code is your verification code": ":code is your verification code",
   "validation.invalid_patient_id": "Invalid patient number. You’ll find this number in your appointment confirmation from the GGD.",
   "validation.invalid_date_of_birth": "Invalid date of birth. Please enter your date of birth as it is shown on your passport or identity card.",
   "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
