--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -8,14 +8,14 @@
   "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
   "login.birthDate": "Geboortedatum",
   "login.birthDate_placeholder": "DD-MM-JJJJ",
-  "confirmation.header": "Vul uw verificatiecode in",
-  "confirmation.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
-  "confirmation.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
-  "confirmation.code": "Verificatiecode",
-  "confirmation.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
-  "confirmation.retrieve_data": "Gegevens ophalen",
-  "confirmation.no_code.sms": "Geen SMS ontvangen?",
-  "confirmation.no_code.email": "Geen e-mail ontvangen?",
+  "verify.header": "Vul uw verificatiecode in",
+  "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
+  "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
+  "verify.code": "Verificatiecode",
+  "verify.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
+  "verify.retrieve_data": "Gegevens ophalen",
+  "verify.no_code.sms": "Geen SMS ontvangen?",
+  "verify.no_code.email": "Geen e-mail ontvangen?",
   "resend.header.sms": "Ik heb geen SMS ontvangen",
   "resend.header.email": "Ik heb geen e-mail ontvangen",
   "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
@@ -27,7 +27,7 @@
   "footer.see": "Kijk op",
   "continue": "Verder",
   "back": "Terug",
-  ":code is your confirmation code": ":code is uw persoonlijke confirmatie code",
+  ":code is your verification code": ":code is uw persoonlijke verificatiecode",
   "validation.invalid_patient_id": "Geen geldig patiëntnummer. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
   "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Vul a.u.b. uw geboortedatum in zoals die op uw paspoort of identiteitskaart staat.",
   "validation.unknown_patient_id": "Dit patiëntnummer lijkt niet bij de ingevulde geboortedatum te horen.",
