fix: "no code received" button text

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -14,8 +14,8 @@
   "confirmation.verificationCode": "Verification code",
   "confirmation.verificationCode_explanation": "Your verification code is made up of 6 digits",
   "confirmation.retrieve_data": "Retrieve data",
-  "confirmation.no_sms": "No SMS received?",
-  "confirmation.no_email": "No mail received?",
+  "confirmation.no_code.sms": "No SMS received?",
+  "confirmation.no_code.email": "No e-mail received?",
   "resend.header.sms": "I did not receive a text message",
   "resend.header.email": "I did not receive an e-mail",
   "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
