--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -14,8 +14,8 @@
   "confirmation.code": "Verificatiecode",
   "confirmation.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
   "confirmation.retrieve_data": "Gegevens ophalen",
-  "confirmation.no_sms": "Geen SMS ontvangen?",
-  "confirmation.no_email": "Geen mail ontvangen?",
+  "confirmation.no_code.sms": "Geen SMS ontvangen?",
+  "confirmation.no_code.email": "Geen e-mail ontvangen?",
   "resend.header.sms": "Ik heb geen SMS ontvangen",
   "resend.header.email": "Ik heb geen e-mail ontvangen",
   "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
