feat: update copy

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -3,7 +3,7 @@
   "unauthenticated.explanation": "Uw verzoek om test- of vaccinatiegegevens op te halen bij de GGD GHOR, kan niet verwerkt worden.",
   "unauthenticated.try_again": "Ga a.u.b. terug naar de applicatie of website die u heeft doorgestuurd en probeer het opnieuw.",
   "login.header": "Vul uw patiëntnummer en geboortedatum in",
-  "login.instructions": "Log in met uw patiëntnummer om :client_name toegang te geven tot uw test- of vaccinatiegegevens.",
+  "login.instructions": "U geeft :client_name toestemming om uw test- of vaccinatiegegevens op te halen.",
   "login.patientId": "Patientnummer",
   "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
   "login.birthDate": "Geboortedatum",
@@ -22,7 +22,7 @@
   "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
   "resend.contact_ggd": "Als u geen bericht van ons ontvangt kunt u uw gegevens ook opvragen door te bellen met de GGD op <a href=\"tel:08005090\">0800 - 5090</a>.",
   "resend.button": "Opnieuw versturen",
-  "footer.about_ggd": "GGD GHOR Nederland is de belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. De GGD GHOR staat voor de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR)",
+  "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
   "footer.more_information": "Meer informatie",
   "footer.see": "Kijk op",
   "continue": "Verder",
