--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3,16 +3,16 @@
   "unauthenticated.explanation": "Your request to retrieve test or vaccination data from the GGD GHOR, can not be processed.",
   "unauthenticated.try_again": "Please go back to the application or website that redirected you and try again.",
   "login.header": "Enter your patient number and birth date",
-  "login.instructions": "Log in with your patient number to grant :client_name access to your test or vaccination data.",
+  "login.instructions": "You give :client_name permission to retrieve your test or vaccination data.",
   "login.patientId": "Patient number",
   "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
-  "login.birthDate": "Birth date",
+  "login.birthDate": "Date of birth",
   "login.birthDate_placeholder": "DD-MM-YYYY",
   "verify.header": "Enter your verification code",
   "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
-  "verify.explanation.email": "You have received an e-mail with your verification code at :send_to. Your code is valid for 5 minutes.",
-  "verify.verificationCode": "Verification code",
-  "verify.verificationCode_explanation": "Your verification code is made up of 6 digits",
+  "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for 5 minutes.",
+  "verify.code": "Verification code",
+  "verify.code_explanation": "Your verification code is made up of 6 digits",
   "verify.retrieve_data": "Retrieve data",
   "verify.no_code.sms": "No SMS received?",
   "verify.no_code.email": "No e-mail received?",
