--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -22,6 +22,8 @@
   "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
   "resend.contact_ggd": "I you don't receive a message from us you can also request your data by calling the GGD at <a href=\"tel:08005090\">0800 - 5090</a>.",
   "resend.button": "Send again",
+  "resend.email.button": "Send e-mail again",
+  "resend.sms.button": "Send text message again",
   "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
   "footer.more_information": "More information",
   "footer.see": "See",
