--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -22,8 +22,8 @@
   "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
   "resend.contact_ggd": "Als u geen bericht van ons ontvangt kunt u uw gegevens ook opvragen door te bellen met de GGD op <a href=\"tel:08005090\">0800 - 5090</a>.",
   "resend.button": "Opnieuw versturen",
-  "resend.email.button": "Opnieuw e-mail versturen",
-  "resend.sms.button": "Opnieuw SMS versturen",
+  "resend.email.button": "(Opnieuw) e-mail versturen",
+  "resend.sms.button": "(Opnieuw) SMS versturen",
   "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
   "footer.more_information": "Meer informatie",
   "footer.see": "Kijk op",
