fix: split birthdate

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -7,7 +7,9 @@
   "login.patientId": "Patient number",
   "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
   "login.birthDate": "Date of birth",
-  "login.birthDate_placeholder": "DD-MM-YYYY",
+  "login.day": "Day",
+  "login.month": "Month",
+  "login.year": "Year",
   "verify.header": "Enter your verification code",
   "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
   "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for 5 minutes.",
