--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -7,7 +7,9 @@
   "login.patientId": "Patientnummer",
   "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
   "login.birthDate": "Geboortedatum",
-  "login.birthDate_placeholder": "DD-MM-JJJJ",
+  "login.day": "Dag",
+  "login.month": "Maand",
+  "login.year": "Jaar",
   "verify.header": "Vul uw verificatiecode in",
   "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
   "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
