--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -22,7 +22,7 @@
   "resend.header.email": "I did not receive an e-mail",
   "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
   "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
-  "resend.contact_ggd": "I you don't receive a message from us you can also request your data by calling the GGD at <a href=\"tel:08005090\">0800 - 5090</a>.",
+  "resend.contact_ggd": "I you don't receive a message from us then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.",
   "resend.button": "Send again",
   "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
   "footer.more_information": "More information",
@@ -31,7 +31,7 @@
   "back": "Back",
   "cancel": "Cancel",
   ":code is your verification code": ":code is your verification code",
-  "validation.invalid_patient_id": "Invalid patient number. You’ll find this number in your appointment confirmation from the GGD.",
+  "validation.invalid_patient_id": "Invalid patient number. Your patient number consists of a minimum of 1 and a maximum of 8 digits.",
   "validation.invalid_date_of_birth": "Invalid date of birth. Please enter your date of birth as it is shown on your passport or identity card.",
   "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
   "validation.unknown_date_of_birth": "This date of birth doesn’t seem to match with the entered patient number.",
@@ -41,9 +41,9 @@
   "validation.required_code": "Please enter your 6-digit verification code first.",
   "send failed": "Sending of the confirmation code has failed. Please try again.",
   "faq.no-patient-number.question": "I don’t have a patient number",
-  "faq.no-patient-number.answer": "<p>Your patient number consists of a minimum of 1 and a maximum of 8 digits. This number is always listed at the top of your GGD appointment confirmation. Please check any letters or emails you have received regarding your test or vaccination appointment.</p><p>Didn’t receive an appointment confirmation or can’t find your patient number? Then you can also request this by calling the GGD on <a href=\"08005090\">0800 - 5090</a>.</p>",
+  "faq.no-patient-number.answer": "<p>Your patient number consists of a minimum of 1 and a maximum of 8 digits. This number is always listed at the top of your GGD appointment confirmation. Please check any letters or emails you have received regarding your test or vaccination appointment.</p><p>Didn’t receive an appointment confirmation or can’t find your patient number? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
   "faq.birthdate-unknown.question": "My date of birth is unknown",
-  "faq.birthdate-unknown.answer": "<p>Is your date of birth not known? In any case, enter your year of birth and “XX” for the days and months. For example: XX-XX-1980.</p><p>Not working? Then you can also request your details by calling the GGD on <a href=\"tel:08005090\">0800 - 5090</a>.</p>",
+  "faq.birthdate-unknown.answer": "<p>Is your date of birth not known? Fill in at least your year of birth.</p><p>Not working? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
   "ratelimit.header": "Too many attempts",
   "ratelimit.content": "There have been too many login attempts in a short time. Try again later."
 }
