--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -4,7 +4,7 @@
   "unauthenticated.try_again": "Ga a.u.b. terug naar de applicatie of website die u heeft doorgestuurd en probeer het opnieuw.",
   "login.header": "Vul uw patiëntnummer en geboortedatum in",
   "login.instructions": "U geeft :client_name toestemming om uw test- of vaccinatiegegevens op te halen.",
-  "login.patientId": "Patientnummer",
+  "login.patientId": "Patiëntnummer",
   "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
   "login.birthDate": "Geboortedatum",
   "login.day": "Dag",
@@ -22,7 +22,7 @@
   "resend.header.email": "Ik heb geen e-mail ontvangen",
   "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
   "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
-  "resend.contact_ggd": "Als u geen bericht van ons ontvangt kunt u uw gegevens ook opvragen door te bellen met de GGD op <a href=\"tel:08005090\">0800 - 5090</a>.",
+  "resend.contact_ggd": "Als u geen bericht van ons ontvangt dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.",
   "resend.button": "Opnieuw versturen",
   "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
   "footer.more_information": "Meer informatie",
@@ -31,8 +31,8 @@
   "back": "Terug",
   "cancel": "Annuleren",
   ":code is your verification code": ":code is uw persoonlijke verificatiecode",
-  "validation.invalid_patient_id": "Geen geldig patiëntnummer. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
-  "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Vul a.u.b. uw geboortedatum in zoals die op uw paspoort of identiteitskaart staat.",
+  "validation.invalid_patient_id": "Geen geldig patiëntnummer. Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers.",
+  "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Voorbeeld: 01-01-1980.",
   "validation.unknown_patient_id": "Dit patiëntnummer lijkt niet bij de ingevulde geboortedatum te horen.",
   "validation.unknown_date_of_birth": "Deze geboortedatum lijkt niet bij het ingevulde patiëntnummer te horen.",
   "validation.required_patient_id": "Graag uw patiëntnummer invullen. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
@@ -41,9 +41,9 @@
   "validation.required_code": "Graag eerst uw 6-cijferige verificatiecode invullen.",
   "send failed": "Er is een fout opgetreden tijdens het verzenden van de vertificatiecode. Probeer opnieuw.",
   "faq.no-patient-number.question": "Ik heb geen patiëntnummer",
-  "faq.no-patient-number.answer": "<p>Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers. Dit nummer staat altijd bovenaan uw afspraakbevestiging van de GGD. Controleer brieven of e-mails die u hebt gehad over uw test- of vaccinatie-afspraak.</p><p>Heeft u geen afspraakbevestiging gehad of kunt u uw patiëntnummer niet vinden? Dan kunt u deze ook opvragen door te bellen met de GGD op <a href=\"tel:08005090\">0800 - 5090</a>.</p>",
+  "faq.no-patient-number.answer": "<p>Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers. Dit nummer staat altijd bovenaan uw afspraakbevestiging van de GGD. Controleer brieven of e-mails die u hebt gehad over uw test- of vaccinatie-afspraak.</p><p>Heeft u geen afspraakbevestiging gehad of kunt u uw patiëntnummer niet vinden? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
   "faq.birthdate-unknown.question": "Mijn geboortedatum is onbekend",
-  "faq.birthdate-unknown.answer": "<p>Is uw geboortedatum niet bekend? Vul in ieder geval uw geboortejaar in en “XX” voor de dagen en maanden. Bijvoorbeeld: XX-XX-1980.</p><p>Lukt dit niet? Dan kunt u uw gegevens ook opvragen door te bellen met de GGD op <a href=\"tel:08005090\">0800 - 5090</a>.</p>",
+  "faq.birthdate-unknown.answer": "<p>Is uw geboortedatum niet bekend? Vul dan in ieder geval uw geboortejaar in.</p><p>Lukt dit niet? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
   "ratelimit.header": "Te veel pogingen",
   "ratelimit.content": "Er zijn in korte tijd veel inlog-pogingen gedaan. Probeer het later opnieuw."
 }
