--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -24,6 +24,8 @@
   "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
   "resend.contact_ggd": "I you don't receive a message from us then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.",
   "resend.button": "Send again",
+  "resend.email.button": "Send via e-mail",
+  "resend.sms.button": "Send via text message",
   "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
   "footer.more_information": "More information",
   "footer.see": "See",
