--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -24,6 +24,8 @@
   "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
   "resend.contact_ggd": "Als u geen bericht van ons ontvangt dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.",
   "resend.button": "Opnieuw versturen",
+  "resend.email.button": "Verstuur via e-mail",
+  "resend.sms.button": "Verstuur via SMS",
   "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
   "footer.more_information": "Meer informatie",
   "footer.see": "Kijk op",
