--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -34,7 +34,7 @@
   "cancel": "Cancel",
   ":code is your verification code": ":code is your verification code",
   "validation.invalid_patient_id": "Invalid patient number. Your patient number consists of a minimum of 1 and a maximum of 8 digits.",
-  "validation.invalid_date_of_birth": "Invalid date of birth. Please enter your date of birth as it is shown on your passport or identity card.",
+  "validation.invalid_date_of_birth": "Invalid date of birth. For example: 01-01-1980.",
   "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
   "validation.unknown_date_of_birth": "This date of birth doesn’t seem to match with the entered patient number.",
   "validation.required_patient_id": "Please enter your patient number. You’ll find this in your appointment confirmation from the GGD.",
