Added resend throttle view

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,51 +1,53 @@
 {
-  "unauthenticated.header": "Redirect failed",
-  "unauthenticated.explanation": "Your request to retrieve test or vaccination data from the GGD GHOR, can not be processed.",
-  "unauthenticated.try_again": "Please go back to the application or website that redirected you and try again.",
-  "login.header": "Enter your patient number and birth date",
-  "login.instructions": "You give :client_name permission to retrieve your test or vaccination data.",
-  "login.patientId": "Patient number",
-  "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
-  "login.birthDate": "Date of birth",
-  "login.day": "Day",
-  "login.month": "Month",
-  "login.year": "Year",
-  "verify.header": "Enter your verification code",
-  "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
-  "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for 5 minutes.",
-  "verify.code": "Verification code",
-  "verify.code_explanation": "Your verification code is made up of 6 digits",
-  "verify.retrieve_data": "Retrieve data",
-  "verify.no_code.sms": "No SMS received?",
-  "verify.no_code.email": "No e-mail received?",
-  "resend.header.sms": "I did not receive a text message",
-  "resend.header.email": "I did not receive an e-mail",
-  "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
-  "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
-  "resend.contact_ggd": "I you don't receive a message from us then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.",
-  "resend.button": "Send again",
-  "resend.email.button": "Send via e-mail",
-  "resend.sms.button": "Send via text message",
-  "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
-  "footer.more_information": "More information",
-  "footer.see": "See",
-  "continue": "Continue",
-  "back": "Back",
-  "cancel": "Cancel",
-  ":code is your verification code": ":code is your verification code",
-  "validation.invalid_patient_id": "Invalid patient number. Your patient number consists of a minimum of 1 and a maximum of 8 digits.",
-  "validation.invalid_date_of_birth": "Invalid date of birth. For example: 01-01-1980.",
-  "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
-  "validation.unknown_date_of_birth": "This date of birth doesn’t seem to match with the entered patient number.",
-  "validation.required_patient_id": "Please enter your patient number. You’ll find this in your appointment confirmation from the GGD.",
-  "validation.required_date_of_birth": "Please enter your date of birth.",
-  "validation.invalid_code": "Invalid code. Please enter your 6-digit verification code.",
-  "validation.required_code": "Please enter your 6-digit verification code first.",
-  "send failed": "Sending of the confirmation code has failed. Please try again.",
-  "faq.no-patient-number.question": "I don’t have a patient number",
-  "faq.no-patient-number.answer": "<p>Your patient number consists of a minimum of 1 and a maximum of 8 digits. This number is always listed at the top of your GGD appointment confirmation. Please check any letters or emails you have received regarding your test or vaccination appointment.</p><p>Didn’t receive an appointment confirmation or can’t find your patient number? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
-  "faq.birthdate-unknown.question": "My date of birth is unknown",
-  "faq.birthdate-unknown.answer": "<p>Is your date of birth not known? Fill in at least your year of birth.</p><p>Not working? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
-  "ratelimit.header": "Too many attempts",
-  "ratelimit.content": "There have been too many login attempts in a short time. Try again later."
+    "unauthenticated.header": "Redirect failed",
+    "unauthenticated.explanation": "Your request to retrieve test or vaccination data from the GGD GHOR, can not be processed.",
+    "unauthenticated.try_again": "Please go back to the application or website that redirected you and try again.",
+    "login.header": "Enter your patient number and birth date",
+    "login.instructions": "You give :client_name permission to retrieve your test or vaccination data.",
+    "login.patientId": "Patient number",
+    "login.patientId_explanation": "You can find your patient number in your GGD appointment confirmation",
+    "login.birthDate": "Date of birth",
+    "login.day": "Day",
+    "login.month": "Month",
+    "login.year": "Year",
+    "verify.header": "Enter your verification code",
+    "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
+    "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for 5 minutes.",
+    "verify.code": "Verification code",
+    "verify.code_explanation": "Your verification code is made up of 6 digits",
+    "verify.retrieve_data": "Retrieve data",
+    "verify.no_code.sms": "No SMS received?",
+    "verify.no_code.email": "No e-mail received?",
+    "resend.header.sms": "I did not receive a text message",
+    "resend.header.email": "I did not receive an e-mail",
+    "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
+    "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
+    "resend.contact_ggd": "I you don't receive a message from us then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.",
+    "resend.button": "Send again",
+    "resend.email.button": "Send via e-mail",
+    "resend.sms.button": "Send via text message",
+    "footer.about_ggd": "GGD GHOR Nederland is the representative for public health and safety in the Netherlands. The GGD GHOR stands for the umbrella branch organization of the 25 Municipal Health Services (GGDs) and Medical Aid Organizations in the Region (GHOR).",
+    "footer.more_information": "More information",
+    "footer.see": "See",
+    "continue": "Continue",
+    "back": "Back",
+    "cancel": "Cancel",
+    ":code is your verification code": ":code is your verification code",
+    "validation.invalid_patient_id": "Invalid patient number. Your patient number consists of a minimum of 1 and a maximum of 8 digits.",
+    "validation.invalid_date_of_birth": "Invalid date of birth. For example: 01-01-1980.",
+    "validation.unknown_patient_id": "This patient number doesn’t seem to match with the entered date of birth.",
+    "validation.unknown_date_of_birth": "This date of birth doesn’t seem to match with the entered patient number.",
+    "validation.required_patient_id": "Please enter your patient number. You’ll find this in your appointment confirmation from the GGD.",
+    "validation.required_date_of_birth": "Please enter your date of birth.",
+    "validation.invalid_code": "Invalid code. Please enter your 6-digit verification code.",
+    "validation.required_code": "Please enter your 6-digit verification code first.",
+    "send failed": "Sending of the confirmation code has failed. Please try again.",
+    "faq.no-patient-number.question": "I don’t have a patient number",
+    "faq.no-patient-number.answer": "<p>Your patient number consists of a minimum of 1 and a maximum of 8 digits. This number is always listed at the top of your GGD appointment confirmation. Please check any letters or emails you have received regarding your test or vaccination appointment.</p><p>Didn’t receive an appointment confirmation or can’t find your patient number? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
+    "faq.birthdate-unknown.question": "My date of birth is unknown",
+    "faq.birthdate-unknown.answer": "<p>Is your date of birth not known? Fill in at least your year of birth.</p><p>Not working? Then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.</p>",
+    "ratelimit.header": "Too many attempts",
+    "ratelimit.content": "There have been too many login attempts in a short time. Try again later.",
+    "resend_throttle.header": "Can't send new code yet",
+    "resend_throttle.content": "You have requested multiple verification codes in a short time. Please try again in :minutes minutes."
 }
