--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -1,51 +1,53 @@
 {
-  "unauthenticated.header": "Doorverwijzing mislukt",
-  "unauthenticated.explanation": "Uw verzoek om test- of vaccinatiegegevens op te halen bij de GGD GHOR, kan niet verwerkt worden.",
-  "unauthenticated.try_again": "Ga a.u.b. terug naar de applicatie of website die u heeft doorgestuurd en probeer het opnieuw.",
-  "login.header": "Vul uw patiëntnummer en geboortedatum in",
-  "login.instructions": "U geeft :client_name toestemming om uw test- of vaccinatiegegevens op te halen.",
-  "login.patientId": "Patiëntnummer",
-  "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
-  "login.birthDate": "Geboortedatum",
-  "login.day": "Dag",
-  "login.month": "Maand",
-  "login.year": "Jaar",
-  "verify.header": "Vul uw verificatiecode in",
-  "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
-  "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
-  "verify.code": "Verificatiecode",
-  "verify.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
-  "verify.retrieve_data": "Gegevens ophalen",
-  "verify.no_code.sms": "Geen SMS ontvangen?",
-  "verify.no_code.email": "Geen e-mail ontvangen?",
-  "resend.header.sms": "Ik heb geen SMS ontvangen",
-  "resend.header.email": "Ik heb geen e-mail ontvangen",
-  "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
-  "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
-  "resend.contact_ggd": "Als u geen bericht van ons ontvangt dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.",
-  "resend.button": "Opnieuw versturen",
-  "resend.email.button": "Verstuur via e-mail",
-  "resend.sms.button": "Verstuur via SMS",
-  "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
-  "footer.more_information": "Meer informatie",
-  "footer.see": "Kijk op",
-  "continue": "Verder",
-  "back": "Terug",
-  "cancel": "Annuleren",
-  ":code is your verification code": ":code is uw persoonlijke verificatiecode",
-  "validation.invalid_patient_id": "Geen geldig patiëntnummer. Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers.",
-  "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Voorbeeld: 01-01-1980.",
-  "validation.unknown_patient_id": "Dit patiëntnummer lijkt niet bij de ingevulde geboortedatum te horen.",
-  "validation.unknown_date_of_birth": "Deze geboortedatum lijkt niet bij het ingevulde patiëntnummer te horen.",
-  "validation.required_patient_id": "Graag uw patiëntnummer invullen. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
-  "validation.required_date_of_birth": "Graag uw geboortedatum invullen.",
-  "validation.invalid_code": "Geen geldige code. Vul uw 6-cijferige verificatiecode in.",
-  "validation.required_code": "Graag eerst uw 6-cijferige verificatiecode invullen.",
-  "send failed": "Er is een fout opgetreden tijdens het verzenden van de vertificatiecode. Probeer opnieuw.",
-  "faq.no-patient-number.question": "Ik heb geen patiëntnummer",
-  "faq.no-patient-number.answer": "<p>Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers. Dit nummer staat altijd bovenaan uw afspraakbevestiging van de GGD. Controleer brieven of e-mails die u hebt gehad over uw test- of vaccinatie-afspraak.</p><p>Heeft u geen afspraakbevestiging gehad of kunt u uw patiëntnummer niet vinden? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
-  "faq.birthdate-unknown.question": "Mijn geboortedatum is onbekend",
-  "faq.birthdate-unknown.answer": "<p>Is uw geboortedatum niet bekend? Vul dan in ieder geval uw geboortejaar in.</p><p>Lukt dit niet? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
-  "ratelimit.header": "Te veel pogingen",
-  "ratelimit.content": "Er zijn in korte tijd veel inlog-pogingen gedaan. Probeer het later opnieuw."
+    "unauthenticated.header": "Doorverwijzing mislukt",
+    "unauthenticated.explanation": "Uw verzoek om test- of vaccinatiegegevens op te halen bij de GGD GHOR, kan niet verwerkt worden.",
+    "unauthenticated.try_again": "Ga a.u.b. terug naar de applicatie of website die u heeft doorgestuurd en probeer het opnieuw.",
+    "login.header": "Vul uw patiëntnummer en geboortedatum in",
+    "login.instructions": "U geeft :client_name toestemming om uw test- of vaccinatiegegevens op te halen.",
+    "login.patientId": "Patiëntnummer",
+    "login.patientId_explanation": "U vindt uw patiëntnummer in uw afspraakbevestiging van de GGD",
+    "login.birthDate": "Geboortedatum",
+    "login.day": "Dag",
+    "login.month": "Maand",
+    "login.year": "Jaar",
+    "verify.header": "Vul uw verificatiecode in",
+    "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
+    "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
+    "verify.code": "Verificatiecode",
+    "verify.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
+    "verify.retrieve_data": "Gegevens ophalen",
+    "verify.no_code.sms": "Geen SMS ontvangen?",
+    "verify.no_code.email": "Geen e-mail ontvangen?",
+    "resend.header.sms": "Ik heb geen SMS ontvangen",
+    "resend.header.email": "Ik heb geen e-mail ontvangen",
+    "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
+    "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
+    "resend.contact_ggd": "Als u geen bericht van ons ontvangt dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.",
+    "resend.button": "Opnieuw versturen",
+    "resend.email.button": "Verstuur via e-mail",
+    "resend.sms.button": "Verstuur via SMS",
+    "footer.about_ggd": "GGD GHOR Nederland is dé belangenbehartiger voor de publieke gezondheid en veiligheid in Nederland. Het is de overkoepelende brancheorganisatie van de 25 Gemeentelijke Gezondheidsdiensten (GGD’en) en Geneeskundige Hulpverleningsorganisaties in de Regio (GHOR).",
+    "footer.more_information": "Meer informatie",
+    "footer.see": "Kijk op",
+    "continue": "Verder",
+    "back": "Terug",
+    "cancel": "Annuleren",
+    ":code is your verification code": ":code is uw persoonlijke verificatiecode",
+    "validation.invalid_patient_id": "Geen geldig patiëntnummer. Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers.",
+    "validation.invalid_date_of_birth": "Geen geldige geboortedatum. Voorbeeld: 01-01-1980.",
+    "validation.unknown_patient_id": "Dit patiëntnummer lijkt niet bij de ingevulde geboortedatum te horen.",
+    "validation.unknown_date_of_birth": "Deze geboortedatum lijkt niet bij het ingevulde patiëntnummer te horen.",
+    "validation.required_patient_id": "Graag uw patiëntnummer invullen. U vindt dit nummer in uw afspraakbevestiging van de GGD.",
+    "validation.required_date_of_birth": "Graag uw geboortedatum invullen.",
+    "validation.invalid_code": "Geen geldige code. Vul uw 6-cijferige verificatiecode in.",
+    "validation.required_code": "Graag eerst uw 6-cijferige verificatiecode invullen.",
+    "send failed": "Er is een fout opgetreden tijdens het verzenden van de vertificatiecode. Probeer opnieuw.",
+    "faq.no-patient-number.question": "Ik heb geen patiëntnummer",
+    "faq.no-patient-number.answer": "<p>Uw patiëntnummer bestaat uit minimaal 1 en maximaal 8 cijfers. Dit nummer staat altijd bovenaan uw afspraakbevestiging van de GGD. Controleer brieven of e-mails die u hebt gehad over uw test- of vaccinatie-afspraak.</p><p>Heeft u geen afspraakbevestiging gehad of kunt u uw patiëntnummer niet vinden? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
+    "faq.birthdate-unknown.question": "Mijn geboortedatum is onbekend",
+    "faq.birthdate-unknown.answer": "<p>Is uw geboortedatum niet bekend? Vul dan in ieder geval uw geboortejaar in.</p><p>Lukt dit niet? Dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.</p>",
+    "ratelimit.header": "Te veel pogingen",
+    "ratelimit.content": "Er zijn in korte tijd veel inlog-pogingen gedaan. Probeer het later opnieuw.",
+    "resend_throttle.header": "Kan nog geen nieuwe code sturen",
+    "resend_throttle.content": "U heeft in een korte tijd meerdere verificatiecodes aangevraagd. Probeer het over :minutes minuten opnieuw."
 }
