Added expires minutes based on config in view and translation

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -11,8 +11,8 @@
   "login.month": "Month",
   "login.year": "Year",
   "verify.header": "Enter your verification code",
-  "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for 5 minutes.",
-  "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for 5 minutes.",
+  "verify.explanation.sms": "You have received a text message with your verification code at :sent_to. Your code is valid for :minutes minutes.",
+  "verify.explanation.email": "You have received an e-mail with your verification code at :sent_to. Your code is valid for :minutes minutes.",
   "verify.code": "Verification code",
   "verify.code_explanation": "Your verification code is made up of 6 digits",
   "verify.retrieve_data": "Retrieve data",
@@ -20,8 +20,8 @@
   "verify.no_code.email": "No e-mail received?",
   "resend.header.sms": "I did not receive a text message",
   "resend.header.email": "I did not receive an e-mail",
-  "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for 5.",
-  "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for 5.",
+  "resend.explanation.sms": "Didn't receive a text message with verification code? Click \"send again\". Your new code is valid for :minutes minutes.",
+  "resend.explanation.email": "Didn't receive an e-mail with verification code? Click \"send again\". Your new code is valid for :minutes minutes.",
   "resend.contact_ggd": "I you don't receive a message from us then you can use the  <a href=\"https://vragen.coronatest.nl/en/ggd-geprikt-zonder-bsn/\">QR-code application form</a> to contact the GGD.",
   "resend.button": "Send again",
   "resend.email.button": "Send via e-mail",
