--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -11,8 +11,8 @@
   "login.month": "Maand",
   "login.year": "Jaar",
   "verify.header": "Vul uw verificatiecode in",
-  "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
-  "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is 5 minuten geldig.",
+  "verify.explanation.sms": "U hebt een SMS-bericht met verificatiecode ontvangen op :sent_to. Uw code is :minutes minuten geldig.",
+  "verify.explanation.email": "U hebt een e-mail met verificatiecode ontvangen op :sent_to. Uw code is :minutes minuten geldig.",
   "verify.code": "Verificatiecode",
   "verify.code_explanation": "Uw verificatiecode bestaat uit 6 cijfers",
   "verify.retrieve_data": "Gegevens ophalen",
@@ -20,8 +20,8 @@
   "verify.no_code.email": "Geen e-mail ontvangen?",
   "resend.header.sms": "Ik heb geen SMS ontvangen",
   "resend.header.email": "Ik heb geen e-mail ontvangen",
-  "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
-  "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is 5 minuten geldig.",
+  "resend.explanation.sms": "Geen SMS met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is :minutes minuten geldig.",
+  "resend.explanation.email": "Geen e-mail met verificatiecode ontvangen? Klik dan op \"opnieuw versturen\". Uw nieuwe code is :minutes minuten geldig.",
   "resend.contact_ggd": "Als u geen bericht van ons ontvangt dan kunt u via het <a href=\"https://vragen.coronatest.nl/ggd-geprikt-zonder-bsn/\">aanvraagformulier QR-code</a> contact opnemen met de GGD.",
   "resend.button": "Opnieuw versturen",
   "resend.email.button": "Verstuur via e-mail",
